fix(css): remove extra padding top from detached panel

--- a/packages/autocomplete-theme-classic/src/theme.scss
+++ b/packages/autocomplete-theme-classic/src/theme.scss
@@ -510,7 +510,6 @@ body {
     overflow-y: auto;
     padding-bottom: var(--aa-spacing);
     padding-right: var(--aa-spacing-half);
-    padding-top: var(--aa-spacing-half);
     right: 0;
     .aa-PanelLayout {
       box-shadow: none;
